[package]
name = "seify"
version = "0.17.0"
description = "Shiny Samples from your Rusty SDR"
documentation = "https://docs.rs/seify/"
edition = "2021"
homepage = "https://www.futuresdr.org"
license = "Apache-2.0"
repository = "https://github.com/FutureSDR/seify"

[features]
default = ["soapy", "dummy"]
aaronia = ["dep:aaronia-rtsa"]
aaronia_http = ["dep:ureq"]
dummy = []
hackrfone = ["dep:seify-hackrfone"]
rtlsdr = ["dep:seify-rtlsdr"]
soapy = ["dep:soapysdr"]

[[example]]
name = "rx_typed"
required-features = ["rtlsdr"]

[dependencies]
futures = "0.3"
log = "0.4"
nom = "7.1"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
thiserror = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = "1.20"
seify-rtlsdr = { path = "crates/rtl-sdr-rs", version = "0.0.3", optional = true }
seify-hackrfone = { path = "crates/seify-hackrfone", version = "0.1.0", optional = true }
soapysdr = { version = "0.4", optional = true }
ureq = { version = "2.10", features = ["json"], optional = true }

[target.'cfg(any(target_os = "linux", target_os= "windows"))'.dependencies]
aaronia-rtsa = { version = "0.0.6", optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
gnuplot = "0.0.43"
rustfft = "6.2"
vmcircbuffer = "0.0.10"

[package.metadata.docs.rs]
no-default-features = true
