[package]
name = "seify"
version = "0.18.0"
description = "Shiny Samples from your Rusty SDR"
documentation = "https://docs.rs/seify/"
edition = "2021"
homepage = "https://www.futuresdr.org"
license = "Apache-2.0"
repository = "https://github.com/FutureSDR/seify"

[features]
default = ["soapy", "dummy"]
aaronia_http = ["dep:ureq", "dep:serde_json"]
bladerf1 = ["dep:libbladerf-rs"]
dummy = []
hackrfone = ["dep:seify-hackrfone"]
rtlsdr = ["dep:seify-rtlsdr"]
soapy = ["dep:soapysdr"]

[[example]]
name = "rx_typed"
required-features = ["rtlsdr"]

[dependencies]
futures = "0.3"
log = "0.4"
nom = "8.0"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
thiserror = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = "1.20"
libbladerf-rs = { git = "https://github.com/ratzrattillo/libbladerf-rs", rev="dfdd5ad", optional = true }
# libbladerf-rs = { path = "../libbladerf-rs", optional = true }
seify-rtlsdr = { path = "crates/rtl-sdr-rs", version = "0.0.3", optional = true }
seify-hackrfone = { path = "crates/seify-hackrfone", version = "0.1.0", optional = true }
soapysdr = { version = "0.4", optional = true }
ureq = { version = "3.0", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
env_logger = "0.11"
gnuplot = "0.0.46"
rustfft = "6.4"
vmcircbuffer = "0.0.12"

[package.metadata.docs.rs]
no-default-features = true
