[package]
name = "seify-hackrfone"
version = "0.1.0"
edition = "2021"
authors = ["Troy Neubauer <troy@foxhunter.ai>"]

[dependencies]
num-complex = "0.4"
thiserror = "1.0.63"
atomic_enum = "0.3.0"
nusb = { git = "https://github.com/kevinmehall/nusb.git" }
futures-lite = "2.3.0"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
